disabled enforce mode and crd upgrades

--- a/gatekeeper/values.yaml
+++ b/gatekeeper/values.yaml
@@ -46,8 +46,7 @@ postUpgrade:
       "pod-security.kubernetes.io/audit-version=latest",
       "pod-security.kubernetes.io/warn=restricted",
       "pod-security.kubernetes.io/warn-version=latest",
-      "pod-security.kubernetes.io/enforce=restricted",
-      "pod-security.kubernetes.io/enforce-version=v1.24"]
+      "pod-security.kubernetes.io/enforce=restricted"]
   affinity: {}
   tolerations: []
   nodeSelector: {kubernetes.io/os: linux}
@@ -74,9 +73,7 @@ postInstall:
     podSecurity: ["pod-security.kubernetes.io/audit=restricted",
       "pod-security.kubernetes.io/audit-version=latest",
       "pod-security.kubernetes.io/warn=restricted",
-      "pod-security.kubernetes.io/warn-version=latest",
-      "pod-security.kubernetes.io/enforce=restricted",
-      "pod-security.kubernetes.io/enforce-version=v1.24"]
+      "pod-security.kubernetes.io/warn-version=latest"]
   probeWebhook:
     enabled: true
     image:
@@ -237,7 +234,7 @@ disabledBuiltins: ["{http.send}"]
 psp:
   enabled: true
 upgradeCRDs:
-  enabled: true
+  enabled: false
   extraRules: []
 rbac:
   create: true
