--- a/gatekeeper/values.yaml
+++ b/gatekeeper/values.yaml
@@ -45,8 +45,7 @@ postUpgrade:
     podSecurity: ["pod-security.kubernetes.io/audit=restricted",
       "pod-security.kubernetes.io/audit-version=latest",
       "pod-security.kubernetes.io/warn=restricted",
-      "pod-security.kubernetes.io/warn-version=latest",
-      "pod-security.kubernetes.io/enforce=restricted"]
+      "pod-security.kubernetes.io/warn-version=latest"]
   affinity: {}
   tolerations: []
   nodeSelector: {kubernetes.io/os: linux}
